logs/graphscraper.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/graphscraper'...
Compiling './lib/python3.5/site-packages/graphscraper/base.py'...
***   File "./lib/python3.5/site-packages/graphscraper/base.py", line 52
    self._are_neighbors_loaded: bool = False
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/graphscraper/db.py'...
***   File "./lib/python3.5/site-packages/graphscraper/db.py", line 52
    self.are_neighbors_cached: bool = False
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/graphscraper/demo.py'...
***   File "./lib/python3.5/site-packages/graphscraper/demo.py", line 15
    g: Graph = Graph.Erdos_Renyi(n=50, p=0.2)
     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/graphscraper/eventdispatcher.py'...
***   File "./lib/python3.5/site-packages/graphscraper/eventdispatcher.py", line 83
    self._registered_listeners: dict[str, dict[types.MethodType, bool]] = {}
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/graphscraper/igraphwrapper.py'...
***   File "./lib/python3.5/site-packages/graphscraper/igraphwrapper.py", line 49
    self._wrapped_graph: IGraph = graph
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/graphscraper/spotifyartist.py'...
***   File "./lib/python3.5/site-packages/graphscraper/spotifyartist.py", line 65
    self._client: SpotifyClient = SpotifyClient(client_id, client_key)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/graphscraper-0.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
